# SR2TR

./: .bazelrc  .clang-format  .gitignore  .travis.yml  BUILD  CMakeLists.txt  LICENSE  README.md  WORKSPACE  main.cpp  makefile
command-line/: BUILD  main.cpp
command_line/: main.cpp
core/: BUILD  Bitset_test.cpp  Hungarian.hpp  ReadTextFile.hpp
include/: Bitset.h  Bitset.hpp  CR.h  CR.hpp  Hungarian.h  Hungarian.hpp  Mapping.h  Mapping.hpp  ReadTextFile.h  ReadTextFile.hpp  Reader.h  Reader.hpp  UIND.h  UIND.hpp  Util.h  Util.hpp
include/core/: Bitset.hpp  Reader.hpp  UIND.hpp  Util.hpp
lib/: BUILD  Bitset.cpp  Bitset.hpp  Bitset_test.cpp  CR.cpp  CR.hpp  Condensed_representation.cpp  Condensed_representation.hpp  Hungarian.cpp  Hungarian.hpp  Mapping.cpp  Mapping.hpp  ReadTextFile.cpp  ReadTextFile.hpp  Reader.cpp  Reader.hpp  Relation.hpp  UIND.cpp  UIND.hpp  Unary_inclusion_dependency.hpp  Util.hpp
site/: index.html
src/: Bitset.cpp  CR.cpp  Condensed_representation.cpp  Condensed_representation.hpp  Hungarian.cpp  Mapping.cpp  ReadTextFile.cpp  Reader.cpp  UIND.cpp  Unary_inclusion_dependency.cpp  Unary_inclusion_dependency.hpp  main.cpp
test/: BUILD  CMakeLists.txt  Integration_tests.cpp  generator.cpp  tester.cpp
test/large-tests/: source.csv  target.csv
test/sample tests/test1/: source.csv
test/sample tests/test2/: target.csv
test/sample tests/test5/: target.csv
test/sample-tests/test1/: source.csv  target.csv
test/sample-tests/test2/: target.csv
test/sample-tests/test3/: target.csv
toolchain/: BUILD
web/: web.cpp
(+39 files in other folders)
